# gameserver-manager

./: .editorconfig  .env-cli  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Pipfile  README.md  deploy.py  main.py  pyproject.toml
.github/workflows/: docker-image.yml
docs/: api-acceptance-criteria.md  architecture.md  local-dev.md
harness/: __init__.py  cli.py
infra/k8s/base/: control-bot-deployment.yaml  control-plane-api-deployment.yaml  control-plane-api-service.yaml  control-plane-web-deployment.yaml  control-plane-web-service.yaml  kustomization.yaml
infra/k8s/local/: bot.env.sample  kustomization.yaml
infra/k8s/prod/: kustomization.yaml
src/: pyproject.toml
src/apps/botdaemon/: Dockerfile  compose.prod.yml  compose.yml  pyproject.toml
src/apps/botdaemon/botdaemon/: .env-sample  main.py
src/apps/cliapp/: .env-sample  pyproject.toml
src/apps/cliapp/cliapp/: main.py
src/botserver/: .env-sample  Pipfile  main.py
src/cliapp/: main.py
src/discord/control-bot/: .env.example  Dockerfile  README.md  package-lock.json  package.json
src/discord/control-bot/src/: index.ts
src/gsmclient/: Pipfile
src/libs/gsmclient/: pyproject.toml
src/libs/gsmclient/gsmclient/: __init__.py  gsmclient.py
src/services/control-plane-api/: .env.example  Dockerfile  README.md  acceptance-criteria.md  aws-config.toml.example  aws-credentials.toml.example  go.mod  go.sum  main.go  openapi.yaml
src/services/control-plane-api/internal/config/: config.go
src/services/control-plane-api/internal/handler/: handler.go  health.go  operations.go  refactor.go  servers.go
src/services/control-plane-api/internal/middleware/: logging.go
src/services/control-plane-web/: .env.example  Dockerfile  README.md  package-lock.json  package.json
src/services/control-plane-web/src/: index.ts
(+8 files in other folders)
