[project]
name = "gameserver-manager-harness"
version = "0.1.0"
description = "Build and deploy game-server-manager services to a local Kubernetes cluster."
requires-python = ">=3.10"
dependencies = ["typer>=0.26"]

[project.scripts]
deploy = "harness.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]
